--- a/Prometheus/.gitattributes
+++ b/Prometheus/.gitattributes
@@ -1,2 +1,4 @@
 Prometheus/prometheus-2.53.0.linux-amd64/promtool filter=lfs diff=lfs merge=lfs -text
 Prometheus/prometheus-2.53.0.linux-amd64/prometheus filter=lfs diff=lfs merge=lfs -text
+prometheus-2.53.0.linux-amd64/promtool filter=lfs diff=lfs merge=lfs -text
+prometheus-2.53.0.linux-amd64/prometheus filter=lfs diff=lfs merge=lfs -text
